--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -144,3 +144,10 @@ body {
     color: #bbb;
     text-decoration: none;
 }
+
+.verified-badge-icon {
+    width: 16px;
+    height: 16px;
+    vertical-align: middle;
+    margin-left: 5px;
+}
